--- a/styles.css
+++ b/styles.css
@@ -13,39 +13,9 @@
 .osoite {
   border: 1px solid white;
 }
-/* 
-h1 {
-  font-size: 50px;
-  color: black;
+.kuva {
+  /*
+  width: 100px;
+  height: 100px;
+  */
 }
-article {
-  float: left;
-  width: 75%;
-  border: 1px solid black;
-}
-aside {
-  display: flex;
-  width: 10%;
-  border: 1px solid black;
-}
-main {
-  border: 1px solid black;
-  clear: left;
-}
-
-clearfloat {
-  clear: both;
-}
-div {
-  list-style-type: none;
-}
-div {
-  display: flex;
-}
-div {
-  flex-shrink: 0;
-}
-div {
-  flex-grow: 1;
-}
-*/
